@@ -1872,7 +1872,7 @@ X509_F_X509_STORE_CTX_INIT:143:X509_STORE_CTX_init
 X509_F_X509_STORE_CTX_NEW:142:X509_STORE_CTX_new
 X509_F_X509_STORE_CTX_PURPOSE_INHERIT:134:X509_STORE_CTX_purpose_inherit
 X509_F_X509_STORE_NEW:158:X509_STORE_new
-X509_F_X509_TO_X509_REQ:126:X509_to_X509_REQ
+X509_F_X509_TO_X509_REQ_EX:167:
 X509_F_X509_TRUST_ADD:133:X509_TRUST_add
 X509_F_X509_TRUST_SET:141:X509_TRUST_set
 X509_F_X509_VERIFY:161:X509_verify
