@@ -1,0 +1,23 @@
+-----BEGIN CERTIFICATE-----
+MIIDzDCCArSgAwIBAgIUEOqJ/yED2MuM12UlxuqSjJD9J4UwDQYJKoZIhvcNAQEL
+BQAwgZIxCzAJBgNVBAYTAlJVMQ8wDQYDVQQIDAZNb3Njb3cxDzANBgNVBAcMBk1v
+c2NvdzERMA8GA1UECgwIS2lyeWFPcmcxEDAOBgNVBAsMB1RvcFVuaXQxDjAMBgNV
+BAMMBUtpcnlhMSwwKgYJKoZIhvcNAQkBFh1raXJpbGxfc3RlZmFuZW5rb3ZAcmFt
+Ymxlci5ydTAeFw0xOTA3MzEwMDI4NDFaFw0xOTA4MzAwMDI4NDFaMIGSMQswCQYD
+VQQGEwJSVTEPMA0GA1UECAwGTW9zY293MQ8wDQYDVQQHDAZNb3Njb3cxETAPBgNV
+BAoMCEtpcnlhT3JnMRAwDgYDVQQLDAdUb3BVbml0MQ4wDAYDVQQDDAVLaXJ5YTEs
+MCoGCSqGSIb3DQEJARYda2lyaWxsX3N0ZWZhbmVua292QHJhbWJsZXIucnUwggEi
+MA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDL7PyjUKt4jusCiw6ZzjmTUx8G
+y/YfDCUXjGjkgXWj0KoKJwydr1iHLtwzPLlSTN4DI4N4bR/LoftVti6I5h3uckIG
+VqeCo+r4rRYLwsEyLYrMqOKkoCHNm5UMDM660DWgVIJZJTWgik7s+FxCTdQxe7CJ
+/mzcdQW4WX3KcmDCCuSOfeQLLp4B3moMyjSlAhTd1+4gY1mMBHKPDYRI9AFyqCxm
+ocU6kevBD10quVMrw8uZ6jwDiv8n4rJN0lvUM+SdL44XZ+aVuW5Jq/fAlM7RqTzI
+Cq9NXcL0sM8iR1u5/+T+5iCC65sXrEU2kfNVU2QREEtlVuEpbQzZzCHeZEDPAgMB
+AAGjGDAWMBQGA1UdEQQNMAuCCVRlc3QxLmNvbTANBgkqhkiG9w0BAQsFAAOCAQEA
+NhfRvFlbHWYnO8weyFKlSwyMBdBdirIGTrOzKYA5Y7h6Spqlv2zkXtavoorzZ5b/
+yv/6fImxoNo7AwYHZfDktQ36pgVoadwt5CpIDXD6eQKxPowOlWpJTSU7vZ1xXtjC
+BY7B2ptiM3mnzGm/Uxlck3grGvUqImD5UhT7NMn7m0OQ+d3v/YuKT91sA4eIJPRP
+VhepbJM/qo0hQtLK5j0fE/5+R6O8oFw+EL49HfIDOtfeC0Ul8h8uYnhDlWxH4JmY
+zUuIvLBq/ZeGqjbP+FYOhhvRrmNk0LOeEqyPgo603+5Bsn+eNjJ1TSSpW9Bye9FK
+bo1JSuviYyUqIx0FFdVgjw==
+-----END CERTIFICATE-----
