@@ -1,0 +1,19 @@
+-----BEGIN CERTIFICATE REQUEST-----
+MIIC/zCCAecCAQAwgZIxCzAJBgNVBAYTAlJVMQ8wDQYDVQQIDAZNb3Njb3cxDzAN
+BgNVBAcMBk1vc2NvdzERMA8GA1UECgwIS2lyeWFPcmcxEDAOBgNVBAsMB1RvcFVu
+aXQxDjAMBgNVBAMMBUtpcnlhMSwwKgYJKoZIhvcNAQkBFh1raXJpbGxfc3RlZmFu
+ZW5rb3ZAcmFtYmxlci5ydTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEB
+AMvs/KNQq3iO6wKLDpnOOZNTHwbL9h8MJReMaOSBdaPQqgonDJ2vWIcu3DM8uVJM
+3gMjg3htH8uh+1W2LojmHe5yQgZWp4Kj6vitFgvCwTItisyo4qSgIc2blQwMzrrQ
+NaBUglklNaCKTuz4XEJN1DF7sIn+bNx1BbhZfcpyYMIK5I595AsungHeagzKNKUC
+FN3X7iBjWYwEco8NhEj0AXKoLGahxTqR68EPXSq5UyvDy5nqPAOK/yfisk3SW9Qz
+5J0vjhdn5pW5bkmr98CUztGpPMgKr01dwvSwzyJHW7n/5P7mIILrmxesRTaR81VT
+ZBEQS2VW4SltDNnMId5kQM8CAwEAAaAnMCUGCSqGSIb3DQEJDjEYMBYwFAYDVR0R
+BA0wC4IJVGVzdDEuY29tMA0GCSqGSIb3DQEBCwUAA4IBAQAyWTgDM+OSyg7lsMos
+TicB4xiSbrKuRFxhvannIjYvE6CEAIAShIzh349hRiP4yq8eHx5iU/eeA0pUMsUj
+qlDREE0pkBFqAk6Rx8tGxDFeeeZEuhQi2CGgrjvzznWIo10NIVEZi0NW+EWAVFXP
+xxKyl4wQZlDCfQWyo6CXOJa9SA7pT5zWe+tXQfgpEi8S9D5y+VWh/dsDghygwpfd
+i+UgFR/ceiGjM9yLlrXRjppqSaAKquixfJwYm6+nMLxgI62O9fJ6M1J3vHGPJRtj
+i8iZWY/5YQcignq8VbIgW5qY+fXuVivdXMs0I7SzG+S6onlNrFjOCJyeKk3uCxRF
+PgUc
+-----END CERTIFICATE REQUEST-----
